--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,12 @@ Flask==3.1.2
 flask-cors==6.0.2
 Flask-MySQL==1.6.0
 Flask-MySQLdb==2.0.0
+gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.3
 mysqlclient==2.2.7
+packaging==25.0
 passlib==1.7.4
 PyMySQL==1.1.2
 Werkzeug==3.1.4
